objects/Web_Order_Item__c.object
<CustomObject>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Web_Order__c</fullName>
        <label>Web Order</label>
        <referenceTo>Web_Order__c</referenceTo>
        <relationshipLabel>Web Order Items</relationshipLabel>
        <relationshipName>Web_Order_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Web_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Web Product</label>
        <referenceTo>Web_Product__c</referenceTo>
        <relationshipLabel>Web Order Items</relationshipLabel>
        <relationshipName>Web_Order_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Web Order Item</label>
    <nameField>
        <label>Web Order Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Web Order Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>